--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry kind="lib" path="C:/workspace-graph/spark-assembly-1.3.1-hadoop2.3.0.jar"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
